RESOLVED FIXED202895
Fix compilation of Crypto.cpp on macOS with !WEB_CRYPTO
https://bugs.webkit.org/show_bug.cgi?id=202895
Summary Fix compilation of Crypto.cpp on macOS with !WEB_CRYPTO
Konstantin Tokarev
Reported 2019-10-13 09:15:33 PDT
Crypto.cpp does not use getCommonCryptoDigestAlgorithm(), defined in CommonCryptoUtilities.h, but requires CommonCrypto includes which are coming with it. However, when WEB_CRYPTO is disabled necessary transitive includes are missing.
Attachments
Patch (1.34 KB, patch)
2019-10-13 09:17 PDT, Konstantin Tokarev
no flags
Konstantin Tokarev
Comment 1 2019-10-13 09:17:04 PDT
Konstantin Tokarev
Comment 2 2019-10-13 12:25:50 PDT
Comment on attachment 380847 [details] Patch Clearing flags on attachment: 380847 Committed r251061: <https://trac.webkit.org/changeset/251061>
Konstantin Tokarev
Comment 3 2019-10-13 12:25:54 PDT
All reviewed patches have been landed. Closing bug.
Ling Ho
Comment 4 2019-10-15 15:10:50 PDT
Note You need to log in before you can comment on or make changes to this bug.